// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with relevant formStyles 1`] = `
<div>
  <page>
    <text
      style="font-size: 9pt; font-weight: 300; border: 1px solid red;"
    />
  </page>
</div>
`;

exports[`renders without formStyles 1`] = `
<div>
  <page>
    <text
      style="font-size: 9pt; font-weight: 300;"
    />
  </page>
</div>
`;
